projects/web/public/stylesheets/custom.css
@media ( max-width : 767px) {
    .navbar-nav .open .dropdown-menu {
        position: relative;
        float: none;
        width: auto;
        margin-top: 0;
        background-color: #fff;
        border: 1px solid rgba(0, 0, 0, .15);
        -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
        box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
    }
    .navbar-nav .open .dropdown-menu>li>a:hover, .navbar-nav .open .dropdown-menu>li>a:focus {
        color: #262626;
        text-decoration: none;
        background-color: #f5f5f5 !important;
    }
}

@media ( min-width :768px) {
    .navbar-toggle {
        display: inline-table;
    }
}

@media ( min-width :769px) {
    .navbar-header {
        float: left;
        position: fixed;
        z-index: 3;
        background-color: #f8f8f8;
    }
    .side-menu {
        margin-top: 50px;
    }
    .navbar-toggle {
        display: none !important;
    }
}

.side-menu {
    position: absolute;
}

.side-body {
    margin-top: 70px;
    margin-bottom: 70px;
}

.user-profile-menu-div {
    top: 0;
    right: 0;
    border: 0;
    position: absolute;
    display: block !important;
}

.user-profile-menu {
    background-color: #f3f3f3;
    border: 0;
    border-radius: 0;
    position: absolute;
    top: 0;
    right: 0;
    padding: 15px 13px 15px 25px;
}

.side-menu .navbar-header {
    top: 0px;
}

.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    padding-top: 0px;
}

.username-profile-popup {
    white-space: nowrap;
    font-size: 16px;
}

.dropdown-menu {
    min-width: 160px;
}

.profile-menu {
    border: 0px !important;
}

.profile-menu a {
    padding: 7px 15px !important;
    color: #777 !important;
    font-size: 16px;
}

.side-menu .navbar-nav li a {
    font-size: 16px;
}

.plugins-grid {
    padding-right: 0 !important;
}

.margin-bottom {
    margin-bottom: 5px !important;
}

.select-pane {
    display:none;
}

.btn-row {
    margin-top: 3em;
}

[class*="entypo-"]:before {
    font-family: 'entypo', sans-serif;
}

.file-input input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    padding: 0;
    font-size: 20px;
    cursor: pointer;
    opacity: 0;
    filter: alpha(opacity=0);
}

